err/tgming.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/FormEncode-1.3.1.egg-info'...
Listing './lib/python3.5/site-packages/Ming-0.6.1.egg-info'...
Listing './lib/python3.5/site-packages/WebOb-1.7.4.dist-info'...
Listing './lib/python3.5/site-packages/bson'...
Listing './lib/python3.5/site-packages/docs'...
Listing './lib/python3.5/site-packages/formencode'...
Listing './lib/python3.5/site-packages/formencode/i18n'...
Listing './lib/python3.5/site-packages/formencode/i18n/cs'...
Listing './lib/python3.5/site-packages/formencode/i18n/cs/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/da'...
Listing './lib/python3.5/site-packages/formencode/i18n/da/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/de'...
Listing './lib/python3.5/site-packages/formencode/i18n/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/el'...
Listing './lib/python3.5/site-packages/formencode/i18n/el/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/es'...
Listing './lib/python3.5/site-packages/formencode/i18n/es/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/et'...
Listing './lib/python3.5/site-packages/formencode/i18n/et/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/fi'...
Listing './lib/python3.5/site-packages/formencode/i18n/fi/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/fr'...
Listing './lib/python3.5/site-packages/formencode/i18n/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/it'...
Listing './lib/python3.5/site-packages/formencode/i18n/it/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/ja'...
Listing './lib/python3.5/site-packages/formencode/i18n/ja/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/ko'...
Listing './lib/python3.5/site-packages/formencode/i18n/ko/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/lt'...
Listing './lib/python3.5/site-packages/formencode/i18n/lt/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/nb_NO'...
Listing './lib/python3.5/site-packages/formencode/i18n/nb_NO/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/nl'...
Listing './lib/python3.5/site-packages/formencode/i18n/nl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/pl'...
Listing './lib/python3.5/site-packages/formencode/i18n/pl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/pt_BR'...
Listing './lib/python3.5/site-packages/formencode/i18n/pt_BR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/pt_PT'...
Listing './lib/python3.5/site-packages/formencode/i18n/pt_PT/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/ru'...
Listing './lib/python3.5/site-packages/formencode/i18n/ru/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/sk'...
Listing './lib/python3.5/site-packages/formencode/i18n/sk/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/sl'...
Listing './lib/python3.5/site-packages/formencode/i18n/sl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/sr'...
Listing './lib/python3.5/site-packages/formencode/i18n/sr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/sv'...
Listing './lib/python3.5/site-packages/formencode/i18n/sv/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/tr'...
Listing './lib/python3.5/site-packages/formencode/i18n/tr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/zh_CN'...
Listing './lib/python3.5/site-packages/formencode/i18n/zh_CN/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/zh_TW'...
Listing './lib/python3.5/site-packages/formencode/i18n/zh_TW/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/javascript'...
Listing './lib/python3.5/site-packages/formencode/tests'...
Listing './lib/python3.5/site-packages/formencode/tests/htmlfill_data'...
Listing './lib/python3.5/site-packages/gridfs'...
Listing './lib/python3.5/site-packages/ming'...
Listing './lib/python3.5/site-packages/ming/distutils_commands'...
Listing './lib/python3.5/site-packages/ming/odm'...
Listing './lib/python3.5/site-packages/ming/orm'...
Listing './lib/python3.5/site-packages/ming/tests'...
Listing './lib/python3.5/site-packages/ming/tests/odm'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pymongo'...
Listing './lib/python3.5/site-packages/pymongo-3.4.0.dist-info'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2017.3.dist-info'...
Listing './lib/python3.5/site-packages/repoze'...
Listing './lib/python3.5/site-packages/repoze/who'...
Listing './lib/python3.5/site-packages/repoze/who/plugins'...
Listing './lib/python3.5/site-packages/repoze/who/plugins/tests'...
Listing './lib/python3.5/site-packages/repoze/who/plugins/tests/fixtures'...
Listing './lib/python3.5/site-packages/repoze/who/tests'...
Listing './lib/python3.5/site-packages/repoze.who-2.3.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tgming'...
Compiling './lib/python3.5/site-packages/tgming/properties.py'...
***   File "./lib/python3.5/site-packages/tgming/properties.py", line 21
    raise TypeError, 'read-only property'
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tgming-0.0.8.egg-info'...
Listing './lib/python3.5/site-packages/webob'...
Listing './lib/python3.5/site-packages/zope'...
Listing './lib/python3.5/site-packages/zope/interface'...
Listing './lib/python3.5/site-packages/zope/interface/common'...
Listing './lib/python3.5/site-packages/zope/interface/common/tests'...
Listing './lib/python3.5/site-packages/zope/interface/tests'...
Listing './lib/python3.5/site-packages/zope.interface-4.4.3.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
